# static_ptr

./: CMakeLists.txt  COPYING
include/static_ptr/: static_ptr.hpp
test/: CMakeLists.txt  test_conversion.cc  test_derived_ptr.cc  test_move_copy.cc  test_string_ptr.cc  test_virtual_ptr.cc
